solved minor bug on mobile, small code refactor

--- a/src/components/Content/Content.module.css
+++ b/src/components/Content/Content.module.css
@@ -7,8 +7,8 @@
     white 70%,
     var(--color-blue-1)
   );
-  margin-top: -0.4rem;
-  padding-top: 0.4rem;
+  margin-top: -0.8rem;
+  padding-top: 0.8rem;
 }
 
 .content {
